tests/ui/transmutability/malformed-program-gracefulness/unknown_src_field.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/unknown_src_field.rs:17:27
   |
LL |     #[repr(C)] struct Src(Missing);
   |                           ^^^^^^^ not found in this scope

error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/unknown_src_field.rs:23:36
   |
LL |     #[repr(C)] struct Src(&'static Missing);
   |                                    ^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
